--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "esbuild-reproduce",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "build": "esbuild index.js --bundle --minify --sourcemap --target=chrome90,safari14 --outfile=public/app.js",
-    "start": "esbuild index.js --servedir=public --outdir=public --bundle"
+    "build": "esbuild index.jsx --bundle --sourcemap --outfile=public/app.js",
+    "start": "esbuild index.jsx --servedir=public --outdir=public --bundle"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "esbuild": "^0.11.22"
+    "esbuild": "^0.11.22",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
