--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "esbuild": "^0.11.22"
+    "esbuild": "^0.11.22",
+    "postcss-value-parser": "^4.1.0"
   }
 }
